Update validation